--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
  body {
   font-family: 'Montserrat', sans-serif;
- background-color: #0e72a6;
+ background: linear-gradient(135deg, #0e72a6, #3a8fd4);
  text-align: center;
  padding-top: 50px;
   }
