--- a/index.html
+++ b/index.html
@@ -13,12 +13,34 @@
  padding-top: 50px;
   }
    
+   h2, a {
+      text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff
+   }
+   
+   h2 {
+      color: white;
+   }
+   
+   .INSTAGRAM {
+     color: pink;
+     text-shadow; 0 0 10px pink, 0 0 20px pink 
+   }
+   .YOUTUBE {
+     color: red;
+     text-shadow: 0 0 10px red, 0 0 70px red;
+   }
+      
+   .TIKTOK {
+     color: red;
+     text-shadow: 0 0 10px red, 0 0 20px white;
+   }
+   
     </style>
   </head>
   <body>
    <h2>Follow my socials!</h2>
-   <div><a href="https://www.instagram.com/x_y.zx/">INSTAGRAM!</a></div>
-   <div><a href="https://www.youtube.com/@Y_XCELO">YOUTUBE</a></div>
-   <div><a href="https://www.tiktok.com/@celo.vfx">TIKTOK</a></div>
+   <div><a class="INSTAGRAM" href="https://www.instagram.com/x_y.zx/">INSTAGRAM!</a></div>
+   <div><a class="YOUTUBE" href="https://www.youtube.com/@Y_XCELO">YOUTUBE</a></div>
+   <div><a class="TIKTOK" href="https://www.tiktok.com/@celo.vfx">TIKTOK</a></div>
    </body>
 </html>
