--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
     
  body {
-  font-family: 'Montserrat', sans-serif;
+   
+   font-family: 'Montserrat', sans-serif;
  background: linear-gradient(135deg, #0e72a6, #3a8fd4);
  text-align: center;
  padding-top: 50px;
@@ -23,7 +24,7 @@
    
    .INSTAGRAM {
      color: pink;
-     text-shadow; 0 0 10px pink, 0 0 20px pink 
+     text-shadow: 0 0 10px pink, 0 0 20px pink; 
    }
    .YOUTUBE {
      color: red;
@@ -38,6 +39,7 @@
     </style>
   </head>
   <body>
+   <img src="invinc.png" alt="Banner" />
    <h2>Follow my socials!</h2>
    <div><a class="INSTAGRAM" href="https://www.instagram.com/x_y.zx/">INSTAGRAM!</a></div>
    <div><a class="YOUTUBE" href="https://www.youtube.com/@Y_XCELO">YOUTUBE</a></div>
