--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </style>
   </head>
   <body>
-   <img src="invinc.png" alt="Banner" />
+   <img src="https://via.placeholder.com/600x200" alt="Banner" />
    <h2>Follow my socials!</h2>
    <div><a class="INSTAGRAM" href="https://www.instagram.com/x_y.zx/">INSTAGRAM!</a></div>
    <div><a class="YOUTUBE" href="https://www.youtube.com/@Y_XCELO">YOUTUBE</a></div>
