--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  body {
    
    font-family: 'Montserrat', sans-serif;
- background: linear-gradient(135deg, #0e72a6, #3a8fd4);
+ background: url('https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExZm0xZXQzNDczM2thNmtmdXhxZm9xZGlvdWhmbmx2amVscHA4b3FtYiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/l3vRnoppYtfEbemBO/giphy.webp') no-repeat center center fixed; background-size: cover;
  text-align: center;
  padding-top: 50px;
   }
