--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
   }
    
    h2, a {
-      text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff
+      text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff;
+      animation: fadeIn 1s ease-out forwards;
+      opacity: 0;
       font-size: 24px;
    }
    
-   h2 {
+   @keyframes fadeIn {
+    to {
+      opacity: 1;
+     }
+   }
+    h2 {
       color: white;
    }
    
@@ -39,13 +46,12 @@
    @media (max-width : 600px) {
      img {
        width: 100px;
-     }
-     
+     } 
      h2 {
+       font-size: 18px; 
+     }
+      a {
        font-size: 18px;
-       
-       a {
-         font-size: 18px;
        }
      }
     </style>
