--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       
    .TIKTOK {
      color: red;
-     text-shadow: 0 0 10px red, 0 0 20px white;
+     text-shadow: 0 0 10px red, 0 0 20px red;
    }
    
    @media (max-width : 600px) {
